Modificações no layout

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="header">
       <div class="container">
         <div class="header-brand">
-          <img src="assets/png/logo.png" alt="" />
+          <img src="assets/png/logo.sweet.png" alt="" />
         </div>
         <nav id="menu">
           <ul class="menu-list">
@@ -47,7 +47,7 @@
       <div class="container">
         <div class="container-info">
           <div class="content-head">
-            <h1 class="content-head-tittle">e-commerce Website</h1>
+            <h1 class="content-head-tittle">Sweet - commerce</h1>
             <h2 class="content-head-desc">Support Local Everything</h2>
           </div>
           <div class="desc-product">
