--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
             </div>
           </div>
           <div class="btn">
-            <div class="icon-bag">
-              <img src="assets/png/icon-bag.png" alt="" />
-            </div>
-            <button>Buy now</button>
+            <button>
+              <i class="fa-solid fa-cart-shopping"></i>
+              <p>Buy now</p>
+            </button>
           </div>
         </div>
         <div class="content-photo">
@@ -90,10 +90,13 @@
             </div>
           </div>
           <div class="action-call">
-            <button>
-              Continue shopping
-              <img src="assets/png/icon-arrow.png" alt="" />
-            </button>
+            <a>
+              <p class="action-desc">Continue shopping</p>
+              <div class="arrow-css">
+                <div class="line"></div>
+                <div class="arrow"></div>
+              </div>
+            </a>
           </div>
         </div>
       </div>
