Responsividade de max-width: 991px, criando menu mobile.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,8 @@
         </div>
         <nav id="menu">
           <ul class="menu-list">
-            <li class="menu-list-item">
-              <a href="">Home</a>
-            </li>
-            <li class="menu-list-item">
-              <a>Products</a>
-            </li>
+            <li class="menu-list-item"><a href="">Home</a></li>
+            <li class="menu-list-item"><a>Products</a></li>
             <li class="menu-list-item"><a>About</a></li>
             <li class="menu-list-item"><a>Contact</a></li>
           </ul>
@@ -49,6 +45,15 @@
             </button>
           </div>
         </div>
+        <nav id="menu-mobile">
+          <i class="fa-solid fa-bars"></i>
+          <ul class="menu-mobile-list">
+            <li class="menu-list-item"><a href="">Home</a></li>
+            <li class="menu-list-item"><a>Products</a></li>
+            <li class="menu-list-item"><a>About</a></li>
+            <li class="menu-list-item"><a>Contact</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main id="content">
